--- a/Balay.css
+++ b/Balay.css
@@ -48,7 +48,7 @@ color: #FFC300;
 	/*padding: 23%;*/
 	margin: 10px 5% 2% 5%;
 	text-align: justify;
-
+	font-size: 20px;
 	color:#54585e;
 }
 .nav-element{
@@ -109,7 +109,7 @@ margin-top: 2%;
 	margin : 10% 2% 2% 5% ; 
 	color: #999999;
     letter-spacing: 5px;
-    font-size: 10px;
+    font-size: 20px;
 
 }
 #first{
@@ -122,7 +122,7 @@ margin-top: 2%;
 
 color: #999999;
     letter-spacing: 2px;
-    font-size: 16px;
+    font-size: 20px;
 
 }
 
@@ -197,6 +197,24 @@ footer div{
 	font-size: 18px;
     line-height: 1.5;
 }
+
+.btnform {
+	margin-top: 2%;
+	text-align: center;
+	padding: 10px;
+	width: 20%;
+	background: #FFC300;
+}
+.btnform a{
+	text-decoration: none;
+    color:white;
+}
+
+form input[type="text"]:focus{
+background-color: lightgrey;
+
+}
+
 .btn {
 	margin-left: 26%;
 	text-align: center;
@@ -304,6 +322,26 @@ color:  #FFC300;
 }
 
 
-table tr{
-	margin:20%;
-} 
+#form{
+background-color: white;
+
+margin-left: 30%;
+}
+ 
+
+
+#form input[type="text"]{
+border: transparent;
+background :#fafafa;
+width: 40%;
+height: 54px;
+font-size: 14px;
+}
+
+#form textarea{
+border: transparent;
+background :#fafafa;
+width: 40%;
+font-size: 14px;
+
+}
